force-app/main/default/objects/Account_Source__c/Account_Source__c.object-meta.xml
<CustomObject>
    <description>Object to track where company originated from and legacyIds</description>
    <label>Account Source</label>
    <nameField>
        <displayFormat>ASN-{000000000}</displayFormat>
        <label>Account Source Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Sources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>