force-app/main/default/objects/Account_Source__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Name of the source for the company record</description>
    <label>Source</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>