force-app/main/default/objects/Account_Source__c/fields/Source_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Legacy_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Source Legacy ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>